# weathercop

./: .actrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  MANIFEST.in  Makefile  PUBLICATION_CHECKLIST.md  README.md  README.org  REFERENCES.md  THREADING_VS_MULTIPROCESSING.md  VERIFICATION.md  __init__.py  ar_models.py  benchmark_cvine_threading.py  bld.bat  build.sh  copulae.py  cvine.pyx  environment.yml  find_copula.py  meta.yaml  outline.org  plotting.py  pyproject.toml  pytest-parallelization-strategy.md  seasonal_cop.py  setup.py  stignore  test_threading.py  tools.py  tox.ini  vine.py  (+1 more)
.github/workflows/: build-wheels.yml  ci.yml
docs/: ANALYSIS_ALL_NAN_DATA_TRANS.md  API_IMPROVEMENTS.md  DWD_API_QUICK_REFERENCE.md  DWD_API_SIGNATURES.md  DWD_DOCUMENTATION_INDEX.md  DWD_INTEGRATION_PLAN.md  FULL_SUITE_MEMORY_PROFILE.md  MEMORY_DIAGNOSTICS.md  TESTING_MEMORY.md  TEST_MEMORY_ANALYSIS.md  Task3_NaN_Diagnostic_Findings.md  XARRAY_LEAK_FINDINGS.md  XARRAY_LEAK_FIX_SUMMARY.md  XARRAY_LEAK_ROOT_CAUSE.md  XARRAY_LEAK_ROOT_CAUSE_DETAILED.md  changing_correlations.py  claude_suggestions_on_vine_py.md  flowchart.tex  llama-cpp-type-hints-on-copulae.org  threading-design.md  vine.org   vine_quantiles.ipython  vine_quantiles.org  vine_quantiles.py  vintage.org
docs/investigation-reports/: threading-race-condition-2025-11.md
docs/plans/: 2025-10-16-github-publication-readiness.md
examples/: README.md  quick_start.py  quickstart.py
examples/configurations/: example_vg_conf.py  kll_vg_conf.py  postdoc_conf.py
scripts/: analyze_memory_log.py  generate_test_vg_cache.py  generate_ufuncs.py  smoke_test.py  tangle.lua  trigger_github_workflow.py
src/weathercop/: __init__.py  cinv_cdf.pyx  cop_conf.py  copulae.py  ensemble_plotting.py  example_data.py  external.py  find_copula.py  multisite.py  multisite_annual.py  multisite_conditional.py  normal_conditional.pyx  normal_conditional.pyxbld  opendata_vg_conf.py  plotting.py  seasonal_cop.py  tools.py  vine.py
src/weathercop/configs/: dwd_vg_conf.py
src/weathercop/examples/: quick_start.py
src/weathercop/tests/: assertion_utils.py  conftest.py  generate_vg_cache.py  memory_diagnostics.py  prof_seasonal_cvine.py  test_config.py  test_config_debug.py  test_copulae.py  test_cyvine.py  test_ensemble.py  test_example_data.py  test_memory_optimization.py  test_multisite.py  test_multisite_conditional.py  test_normal.py  test_quick_start_example.py  test_seasonal_cop.py  test_threading_performance.py  test_vine.py  xarray_tracking.py
src/weathercop/tests/fixtures/: .gitignore  README.md
src/weathercop/ufuncs/: known_fail  setup.py  sympy_cache.json
tests/: debug_ranks_nans.py  test_copulae.py  test_cyvine.py  test_multisite.py  test_normal.py  test_seasonal_cop.py  test_vine.py  test_vintage.py
weathercop/: __init__.py  cop_conf.py  copulae.py  cvine.pyx  ensemble_plotting.py  find_copula.py  multisite.py  multisite_conditional.py  normal_conditional.pyx  plotting.py  seasonal_cop.py  tools.py  vine.py
