[project]
name = "weathercop"
version = "0.2.0"
description = "A Copula-based Weather Generator"
readme = "README.md"
authors = [
  { name = "iskur", email = "32363199+iskur@users.noreply.github.com" }
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.24.1",
    "dask>=2025.11.0",
    "dill>=0.4.0",
    "matplotlib>=3.10.3",
    "netcdf4>=1.7.2",
    "networkx>=3.5",
    "numexpr>=2.11.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scipy>=1.16.0",
    "sympy>=1.14.0",
    "timezonefinder>=6.5.9",
    "tqdm>=4.67.1",
    "varwg>=1.4.7",
    "xarray>=2025.6.1",
]

[build-system]
requires = ["setuptools>=61", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "cython>=3.1.2",
    "flake8>=7.3.0",
    "ipython>=9.5.0",
    "pre-commit>=4.0.0",
    "psutil>=7.1.2",
    "pyflakes>=3.4.0",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
]
optional = [
    "pyfftw>=0.15.0",
]
test = [
    "cython>=3.1.2",
    "psutil>=7.1.2",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "setuptools>=80.9.0",
    "tox>=4.24.2",
    "tox-uv>=1.20.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
weathercop = [
    "tests/fixtures/*.nc",
    "tests/fixtures/.gitignore",
    "examples/*.py",
]

[tool.pytest.ini_options]
testpaths = ["src/weathercop/tests"]
python_files = ["test_*.py"]
python_classes = ["Test"]
python_functions = ["test_*"]
# Use function scope for fixtures to maximize memory cleanup
addopts = "-v --tb=short"
markers = [
    "memory_intensive: marks tests as memory-intensive (deselect with '-m \"not memory_intensive\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.cibuildwheel]
# Build for Python 3.13 only
build = "cp313-*"
skip = "pp* *-musllinux_*"

# Skip testing on Linux (GitLab CI handles full testing on Linux)
# Run smoke tests on Windows and macOS only
test-skip = "cp*-manylinux* cp*-musllinux*"

# Minimal test requirements for smoke test script
test-requires = "xarray netcdf4 matplotlib pandas scipy setuptools"

# Run the smoke test script (reduced to level 3 to stay under time limits)
test-command = "python {project}/scripts/smoke_test.py --level 3"

# Platform-specific settings
[tool.cibuildwheel.linux]
archs = ["x86_64"]
before-build = "pip install cython numpy setuptools && python scripts/generate_ufuncs.py"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-build = "pip install cython numpy setuptools && python scripts/generate_ufuncs.py"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-build = "pip install cython numpy setuptools && python scripts/generate_ufuncs.py"

[tool.black]
line-length = 79
